# Coordinate-Converter

./: .gitignore  .luarc.json  AGENTS.md  CLAUDE.md  HANDOVER.md  README.md  build-output-packs.sh  pyproject.toml
.github/: check_version.py
.github/workflows/: CI.yml  build_dev.yml  build_main.yml  release_packs.yml
src/: __init__.py  build_pack.py  cli.py  converter.py  manual_overrides.py  models.py  release_metadata.py  runtime_assets.py  ui_map_selection.py  versions.py
src/assets/: RUNTIME.md
src/assets/lua/: coords_converter.lua  coords_loader.lua  example_convert.lua  example_use_loader.lua  json.lua
src/assets/python/: coords_converter.py  coords_loader.py  example_convert.py  example_use_loader.py
src/assets/typescript/: coordsConverter.ts  coordsLoader.ts  exampleConvert.ts  exampleUseLoader.ts
src/dbc_source/: __init__.py  areatable.py  common.py  main.py  map.py  uimap.py  uimapassignment.py
src/edge_cases/: 10089.md  __init__.py  inspect_parent_map_alias.py  report_conversion_failures.py
tests/: _coords.py  _portable_coords.py  conftest.py  test_all_coordinates_convert.py  test_coords_corrections_corpus.py  test_coords_runtime.py  test_golden_builder.py  test_golden_converter.py  test_portable_coords_corrections_corpus.py  test_portable_coords_runtime.py  test_standalone.py
tests/fixtures/converter_golden/blackfathom_unresolved/: expected.json  input.json
tests/fixtures/converter_golden/blackrock_spire_unresolved/: input.json
tests/fixtures/converter_golden/dalaran_top_level_identity/: expected.json  input.json
(+20 files in other folders)
