[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coordinate-converter"
version = "0.1.0"
description = "Coordinate pack builder and legacy coordinate converter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
coordinate-converter = "src.cli:main"
coordinate-dbc-source = "src.dbc_source.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
